-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Initial implementation of nullable flat fields has some bugs:
- null marker test in the interpreter runtime is incorrect
- during field layout computation, if the payload is shifted to satisfy alignment requirement, null marker offsets are not updated accordingly
- null marker test in the interpreter runtime is incorrect
- during field layout computation, if the payload is shifted to satisfy alignment requirement, null marker offsets are not updated accordingly
- links to
-
Commit(lworld)
openjdk/valhalla/c7433814
-
Review(lworld)
openjdk/valhalla/1302