8344454: [lworld] Nullable flat fields fixes